update text-to-image notebook

--- a/notebooks/spring-ai/tutorials/8. text-to-image.ipynb
+++ b/notebooks/spring-ai/tutorials/8. text-to-image.ipynb
@@ -67,22 +67,26 @@
     "import org.springframework.ai.openai.OpenAiImageOptions\n",
     "import org.springframework.ai.openai.api.OpenAiImageApi\n",
     "\n",
-    "\n",
+    "// Create the API client\n",
     "val openAiImageApi = OpenAiImageApi.builder().apiKey(apiKey).build()\n",
+    "\n",
+    "// Configure generation options\n",
     "val openAiImageOptions = OpenAiImageOptions.builder()\n",
     "    .model(OpenAiImageApi.ImageModel.DALL_E_3.value)\n",
-    "    .quality(\"hd\")\n",
-    "    .height(1024)\n",
+    "    .quality(\"hd\") // High-definition quality\n",
+    "    .height(1024) // 1024x1024 pixels\n",
     "    .width(1024)\n",
-    "    .style(\"vivid\")\n",
+    "    .style(\"vivid\") // More vibrant, contrasted style\n",
     "    .build()\n",
     "\n",
+    "// Craft image prompt\n",
     "val prompt = ImagePrompt(\n",
     "    \"\"\"A seamless blend of Art Nouveau and futuristic architecture in a coastal city, with organically flowing buildings made of sustainable materials, hanging gardens, and solar-collecting glass domes, detailed illustration\n",
     "    \"\"\",\n",
     "    openAiImageOptions\n",
     ")\n",
     "\n",
+    "// Create the model and generate the image\n",
     "val imageModel = OpenAiImageModel(openAiImageApi)\n",
     "val aiResponse = imageModel.call(prompt)\n",
     "aiResponse"
@@ -143,10 +147,14 @@
     "import kotlin.io.encoding.Base64\n",
     "import kotlin.io.encoding.ExperimentalEncodingApi\n",
     "\n",
+    "// Fetch the image from the URL provided in the response\n",
     "val httpResponse = http.get(aiResponse.result.output.url)\n",
     "val imageBytes = httpResponse.body<ByteArray>()\n",
+    "\n",
+    "// Encode the image as Base64 for inline display\n",
     "val base64Image = Base64.encode(imageBytes)\n",
     "\n",
+    "// Display the image in the notebook\n",
     "HTML(\"<img src='data:image/png;base64,$base64Image'/>\")"
    ],
    "outputs": [
