add mermaid diagram to prompt chaining notebook

--- a/notebooks/agents/Prompt-Chaining Workflow.ipynb
+++ b/notebooks/agents/Prompt-Chaining Workflow.ipynb
@@ -20,6 +20,35 @@
    "execution_count": 1
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "```mermaid\n",
+    "---\n",
+    "title: Prompt Chaining Workflow\n",
+    "config:\n",
+    "    look: handDrawn\n",
+    "    theme: neutral\n",
+    "---\n",
+    "flowchart LR\n",
+    "    In([In]) --> LLM1(LLM Call 1)\n",
+    "    LLM1 -->|Output 1| Gate1{Gate 1}\n",
+    "    Gate1 -- Pass --> LLM2[LLM Call 2]\n",
+    "    Gate1 -. Fail .-> Exit([Exit])\n",
+    "    LLM2 -->|Output 2| LLM3(LLM Call 3)\n",
+    "    LLM3 --> Out([Out])\n",
+    "\n",
+    "    style In fill:#fbf1ee,stroke:#e0b2a0,color:#c2522e\n",
+    "    style Out fill:#fbf1ee,stroke:#e0b2a0,color:#c2522e\n",
+    "    style Exit fill:#fbf1ee,stroke:#e0b2a0,color:#c2522e\n",
+    "    style Gate1 fill:#f3f2fa,stroke:#a29ac3,color:#695fb6\n",
+    "    style LLM1 fill:#eff5ea,stroke:#b1d398,color:#5b9c36\n",
+    "    style LLM2 fill:#eff5ea,stroke:#b1d398,color:#5b9c36\n",
+    "    style LLM3 fill:#eff5ea,stroke:#b1d398,color:#5b9c36\n",
+    "```"
+   ]
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-02T12:02:01.106636Z",
