--- a/notebooks/agents/Prompt-Chaining Workflow.ipynb
+++ b/notebooks/agents/Prompt-Chaining Workflow.ipynb
@@ -23,30 +23,123 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "```mermaid\n",
-    "---\n",
-    "title: Prompt Chaining Workflow\n",
-    "config:\n",
-    "    look: handDrawn\n",
-    "    theme: neutral\n",
-    "---\n",
-    "flowchart LR\n",
-    "    In([In]) --> LLM1(LLM Call 1)\n",
-    "    LLM1 -->|Output 1| Gate1{Gate 1}\n",
-    "    Gate1 -- Pass --> LLM2[LLM Call 2]\n",
-    "    Gate1 -. Fail .-> Exit([Exit])\n",
-    "    LLM2 -->|Output 2| LLM3(LLM Call 3)\n",
-    "    LLM3 --> Out([Out])\n",
     "\n",
-    "    style In fill:#fbf1ee,stroke:#e0b2a0,color:#c2522e\n",
-    "    style Out fill:#fbf1ee,stroke:#e0b2a0,color:#c2522e\n",
-    "    style Exit fill:#fbf1ee,stroke:#e0b2a0,color:#c2522e\n",
-    "    style Gate1 fill:#f3f2fa,stroke:#a29ac3,color:#695fb6\n",
-    "    style LLM1 fill:#eff5ea,stroke:#b1d398,color:#5b9c36\n",
-    "    style LLM2 fill:#eff5ea,stroke:#b1d398,color:#5b9c36\n",
-    "    style LLM3 fill:#eff5ea,stroke:#b1d398,color:#5b9c36\n",
-    "```"
+    "![](image/prompt_chaining.svg)\n",
+    "\n",
+    "\n",
+    "<img src=\"image/prompt_chaining.svg\" width=\"800\" height=\"400\" align=\"center\" alt=\"Prompt Chaining Workflow\">\n"
    ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-02T13:05:48.437462Z",
+     "start_time": "2025-04-02T13:05:48.400400Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "HTML (\n",
+    "    \"\"\"\n",
+    "    <div id=\"mermaid-diagram\"></div>\n",
+    "\n",
+    "    <script type=\"module\">\n",
+    "      import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.esm.min.mjs';\n",
+    "\n",
+    "      mermaid.initialize({\n",
+    "        startOnLoad: false,\n",
+    "        theme: 'neutral',\n",
+    "        securityLevel: 'loose'\n",
+    "      });\n",
+    "\n",
+    "      const diagram = `\n",
+    "        flowchart LR\n",
+    "          In([In]) --> LLM1(LLM Call 1)\n",
+    "          LLM1 -->|Output 1| Gate1{Gate 1}\n",
+    "          Gate1 -- Pass --> LLM2[LLM Call 2]\n",
+    "          Gate1 -. Fail .-> Exit([Exit])\n",
+    "          LLM2 -->|Output 2| LLM3(LLM Call 3)\n",
+    "          LLM3 --> Out([Out])\n",
+    "\n",
+    "          style In fill:#fbf1ee,stroke:#e0b2a0,color:#c2522e\n",
+    "          style Out fill:#fbf1ee,stroke:#e0b2a0,color:#c2522e\n",
+    "          style Exit fill:#fbf1ee,stroke:#e0b2a0,color:#c2522e\n",
+    "          style Gate1 fill:#f3f2fa,stroke:#a29ac3,color:#695fb6\n",
+    "          style LLM1 fill:#eff5ea,stroke:#b1d398,color:#5b9c36\n",
+    "          style LLM2 fill:#eff5ea,stroke:#b1d398,color:#5b9c36\n",
+    "          style LLM3 fill:#eff5ea,stroke:#b1d398,color:#5b9c36\n",
+    "      `;\n",
+    "\n",
+    "      setTimeout(() => {\n",
+    "        mermaid.render('mermaid-render', diagram)\n",
+    "          .then(({ svg }) => {\n",
+    "            document.getElementById('mermaid-diagram').innerHTML = svg;\n",
+    "          })\n",
+    "          .catch(err => {\n",
+    "            console.error(\"Mermaid rendering failed:\", err);\n",
+    "            document.getElementById('mermaid-diagram').innerHTML =\n",
+    "              '<pre style=\"color:red\">Error rendering Mermaid diagram: ' + err.message + '</pre>';\n",
+    "          });\n",
+    "      }, 500);\n",
+    "    </script>\n",
+    "    \"\"\"\n",
+    ")"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div id=\"mermaid-diagram\"></div>\n",
+       "\n",
+       "    <script type=\"module\">\n",
+       "      import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.esm.min.mjs';\n",
+       "\n",
+       "      mermaid.initialize({\n",
+       "        startOnLoad: false,\n",
+       "        theme: 'neutral',\n",
+       "        securityLevel: 'loose'\n",
+       "      });\n",
+       "\n",
+       "      const diagram = `\n",
+       "        flowchart LR\n",
+       "          In([In]) --> LLM1(LLM Call 1)\n",
+       "          LLM1 -->|Output 1| Gate1{Gate 1}\n",
+       "          Gate1 -- Pass --> LLM2[LLM Call 2]\n",
+       "          Gate1 -. Fail .-> Exit([Exit])\n",
+       "          LLM2 -->|Output 2| LLM3(LLM Call 3)\n",
+       "          LLM3 --> Out([Out])\n",
+       "\n",
+       "          style In fill:#fbf1ee,stroke:#e0b2a0,color:#c2522e\n",
+       "          style Out fill:#fbf1ee,stroke:#e0b2a0,color:#c2522e\n",
+       "          style Exit fill:#fbf1ee,stroke:#e0b2a0,color:#c2522e\n",
+       "          style Gate1 fill:#f3f2fa,stroke:#a29ac3,color:#695fb6\n",
+       "          style LLM1 fill:#eff5ea,stroke:#b1d398,color:#5b9c36\n",
+       "          style LLM2 fill:#eff5ea,stroke:#b1d398,color:#5b9c36\n",
+       "          style LLM3 fill:#eff5ea,stroke:#b1d398,color:#5b9c36\n",
+       "      `;\n",
+       "\n",
+       "      setTimeout(() => {\n",
+       "        mermaid.render('mermaid-render', diagram)\n",
+       "          .then(({ svg }) => {\n",
+       "            document.getElementById('mermaid-diagram').innerHTML = svg;\n",
+       "          })\n",
+       "          .catch(err => {\n",
+       "            console.error(\"Mermaid rendering failed:\", err);\n",
+       "            document.getElementById('mermaid-diagram').innerHTML =\n",
+       "              '<pre style=\"color:red\">Error rendering Mermaid diagram: ' + err.message + '</pre>';\n",
+       "          });\n",
+       "      }, 500);\n",
+       "    </script>\n",
+       "    "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   },
   {
    "metadata": {
