update prompt chaining notebook with detailed explanations

--- a/notebooks/agents/Prompt-Chaining Workflow.ipynb
+++ b/notebooks/agents/Prompt-Chaining Workflow.ipynb
@@ -1,18 +1,53 @@
 {
  "cells": [
   {
-   "cell_type": "code",
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Prompt Chaining Workflow\n",
+    "\n",
+    "In this notebook, we'll explore the prompt chaining workflow.\n",
+    "Using Kotlin and Claude via the LangChain4j library,\n",
+    "we'll implement a practical example that demonstrates how to break down complex tasks into manageable steps.\n",
+    "\n",
+    "## What is prompt chaining?\n",
+    "\n",
+    "Prompt chaining is a technique where we decompose a complex task into a sequence of simpler steps.\n",
+    "Each step involves an LLM call that processes the output from the previous step.\n",
+    "This creates a _\"chain\"_ of prompts that collectively solve the original problem.\n",
+    "\n",
+    "![Prompt Chaining Workflow Diagram](image/prompt_chaining.svg)\n",
+    "\n",
+    "### Key benefits:\n",
+    "- By focusing on smaller tasks, improved accuracy\n",
+    "- Each step is controlled and verified\n",
+    "- Using different prompts is optimized for different tasks\n",
+    "\n",
+    "### When to use prompt chaining\n",
+    "\n",
+    "Common use cases include:\n",
+    "\n",
+    "- Content generation followed by translation\n",
+    "- Creating outlines before drafting full documents\n",
+    "- Data extraction and transformation processes\n",
+    "\n",
+    "## Setting up environment\n",
+    "\n",
+    "First, let's set up a Kotlin notebook with the necessary dependencies:"
+   ]
+  },
+  {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-02T14:35:31.464365Z",
-     "start_time": "2025-04-02T14:35:25.468308Z"
+     "end_time": "2025-04-04T15:02:26.614378Z",
+     "start_time": "2025-04-04T15:02:25.650257Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "%useLatestDescriptors\n",
     "%use coroutines\n",
-    "\n",
     "@file:DependsOn(\"dev.langchain4j:langchain4j:1.0.0-beta2\")\n",
     "@file:DependsOn(\"dev.langchain4j:langchain4j-anthropic:1.0.0-beta2\")"
    ],
@@ -22,13 +57,13 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "![Prompt Chaining Workflow](image/prompt_chaining.svg)"
+   "source": "We'll need an API key for accessing Claude:"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-02T14:35:31.547264Z",
-     "start_time": "2025-04-02T14:35:31.479935Z"
+     "end_time": "2025-04-04T15:02:27.572455Z",
+     "start_time": "2025-04-04T15:02:27.509529Z"
     }
    },
    "cell_type": "code",
@@ -37,10 +72,19 @@
    "execution_count": 2
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Creating the LLM interface\n",
+    "\n",
+    "Next, build a helper function to handle LLM calls:"
+   ]
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-02T14:35:32.076774Z",
-     "start_time": "2025-04-02T14:35:31.552124Z"
+     "end_time": "2025-04-04T15:03:28.064951Z",
+     "start_time": "2025-04-04T15:03:27.633704Z"
     }
    },
    "cell_type": "code",
@@ -77,9 +121,21 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Implementing the `chain` function\n",
+    "\n",
+    "The core of implementation is the `chain` function, which manages the flow of data our prompt sequence:"
+   ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-04T15:04:28.554142Z",
+     "start_time": "2025-04-04T15:04:28.430598Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "suspend fun chain(input: String, prompts: List<String>): String {\n",
     "    var result = input\n",
@@ -90,19 +146,37 @@
     "    }\n",
     "    return result\n",
     "}"
+   ],
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "This function:\n",
+    "- Takes an initial input and a list of prompts\n",
+    "- Iterates through each prompt in a sequence\n",
+    "- Passes the result of each step as input to the next\n",
+    "- Tracks progress through console output\n",
+    "\n",
+    "## Creating prompt sequence\n",
+    "\n",
+    "Now define the series of prompts that make up our chain.\n",
+    "Each prompt handles a specific subtask:"
    ]
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-02T14:35:32.137710Z",
-     "start_time": "2025-04-02T14:35:32.084374Z"
+     "end_time": "2025-04-04T15:06:08.434041Z",
+     "start_time": "2025-04-04T15:06:08.387066Z"
     }
    },
    "cell_type": "code",
    "source": [
     "val prompts = listOf(\n",
-    "                                // Step 1\n",
+    "    // Step 1\n",
     "    \"\"\"\n",
     "    Extract only the numerical values and their associated metrics from the text.\n",
     "    Format each as 'value: metric' on a new line.\n",
@@ -110,7 +184,7 @@
     "    92: customer satisfaction\n",
     "    45%: revenue growth\n",
     "    \"\"\",\n",
-    "                                // Step 2\n",
+    "    // Step 2\n",
     "    \"\"\"\n",
     "    Convert all numerical values to percentages where possible.\n",
     "    If not a percentage or points, convert to decimal (e.g., 92 points -> 92%).\n",
@@ -119,7 +193,7 @@
     "    92%: customer satisfaction\n",
     "    45%: revenue growth\n",
     "    \"\"\",\n",
-    "                                // Step 3\n",
+    "    // Step 3\n",
     "    \"\"\"\n",
     "    Sort all lines in descending order by numerical value.\n",
     "    Keep the format 'value: metric' on each line.\n",
@@ -127,7 +201,7 @@
     "    92%: customer satisfaction\n",
     "    87%: employee satisfaction\n",
     "    \"\"\",\n",
-    "                                // Step 4\n",
+    "    // Step 4\n",
     "    \"\"\"\n",
     "    Format the sorted data as a markdown table with columns:\n",
     "    | Metric | Value |\n",
@@ -137,13 +211,22 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Testing chain\n",
+    "\n",
+    "Let's test implementation on a sample quarterly report:"
+   ]
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-02T14:35:32.263677Z",
-     "start_time": "2025-04-02T14:35:32.145525Z"
+     "end_time": "2025-04-04T15:07:32.124922Z",
+     "start_time": "2025-04-04T15:07:32.090866Z"
     }
    },
    "cell_type": "code",
@@ -162,13 +245,18 @@
     "    \"\"\".trimIndent()"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Finally, execute the prompt chain"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-02T14:35:38.713829Z",
-     "start_time": "2025-04-02T14:35:32.413854Z"
+     "end_time": "2025-04-04T15:08:00.666024Z",
+     "start_time": "2025-04-04T15:07:53.244973Z"
     }
    },
    "cell_type": "code",
@@ -247,6 +335,20 @@
     }
    ],
    "execution_count": 7
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "Prompt chaining offers a powerful and flexible approach to building AI agents.\n",
+    "By breaking complex tasks into manageable steps,\n",
+    "we can achieve higher accuracy and better control over the generation process.\n",
+    "\n",
+    "This pattern is particularly valuable when developing applications that require structured data transformation,\n",
+    "multi-stage content generation, or any task that benefits from a divide-and-conquer approach."
+   ]
   }
  ],
  "metadata": {
